feat(authHeros): get all auth heros and using header from tsao
